default.css: multi-columns width: default from 15em -> 12em everywhere, as it looks fine and avoids needing to add specialcases constantly
eg popins currently need a 12/13em override for scraped abstract ToCs, but why keep ad hoc patching the multi-columns width instead of fixing at root? it's just going to come up somewhere else as well...

--- a/includes/inlined-graphical-linkicon-styles.html
+++ b/includes/inlined-graphical-linkicon-styles.html
@@ -57,6 +57,7 @@ a[data-link-icon='tensorflow'] { --link-icon-url: url('/static/img/icons/tensorf
 a[data-link-icon='alcor'] { --link-icon-url: url('/static/img/icons/alcor.svg'); }
 a[data-link-icon='cochrane-collaboration'] { --link-icon-url: url('/static/img/icons/cochrane-collaboration.svg'); }
 a[data-link-icon='connected-papers'] { --link-icon-url: url('/static/img/icons/connected-papers.svg'); }
+a[data-link-icon='the-pirate-bay'] { --link-icon-url: url('/static/img/icons/the-pirate-bay.svg'); }
 a[data-link-icon='nasa'] { --link-icon-url: url('/static/img/icons/nasa.svg'); }
 a[data-link-icon='metaculus'] { --link-icon-url: url('/static/img/icons/metaculus.svg'); }
 a[data-link-icon='wandb'] { --link-icon-url: url('/static/img/icons/wandb.svg'); }
