--- a/css/default.css
+++ b/css/default.css
@@ -4833,7 +4833,7 @@ section.highlight-fading::before {
     }
     #back-to-top a {
         width: 1.5em;
-        border: 2px solid currentColor;
+        border: 1px solid currentColor;
         background-color: var(--GW-body-background-color);
         padding: 0.125em 0.25em;
     }
@@ -4991,33 +4991,23 @@ section.highlight-fading::before {
 /******************/
 
 .mode-selector {
-    position: absolute;
-    display: flex;
     padding: 0.1em 0.25em 0.3em 0.25em;
     background-color: var(--GW-mode-selector-background-color);
-    border: 3px solid transparent;
     opacity: 0.3;
     transition:
         opacity 2s ease;
 }
-#ui-elements-container .mode-selector.hidden {
-    opacity: 0;
-}
-#ui-elements-container .mode-selector:hover {
+.mode-selector:hover {
     transition: none;
     opacity: 1.0;
-    border: 3px double var(--GW-mode-selector-border-hover-color);
 }
 
-.mode-selector-inline {
-    --GW-mode-selector-background-color: var(--GW-link-underline-background-color);
-
-	position: static;
-    display: inline;
-    margin: 0 -0.25em;
-}
+/*	Mode selector buttons.
+ */
 
 .mode-selector button {
+	--mode-selector-button-left-adjust: 0px;
+
     -moz-appearance: none;
     appearance: none;
     border: none;
@@ -5030,37 +5020,17 @@ section.highlight-fading::before {
     color: var(--GW-mode-selector-button-text-color);
     position: relative;
     display: flex;
-}
-.mode-selector-inline button {
-    display: inline-block;
-}
-
-.mode-selector button::before {
-    opacity: 0.4;
-}
-.mode-selector button::before {
-    position: absolute;
-}
-
-.mode-selector button {
-	--mode-selector-button-left-adjust: 0px;
-
     margin: 0 0 0 calc(  var(--mode-selector-button-base-left-margin) 
     				   + var(--mode-selector-button-left-adjust));
 }
-.mode-selector.mode-selector-inline button {
-    margin: 0 0 0 calc(  var(--mode-selector-button-base-left-margin) 
-    				   + var(--mode-selector-button-left-adjust) 
-    				   - 0.25em);
-}
 .mode-selector button::before {
+    position: absolute;
     width: 1.4em;
     height: 1.4em;
     left: calc(-1 * (  var(--mode-selector-button-base-left-spacing) 
     			     + var(--mode-selector-button-left-adjust)));
+    opacity: 0.4;
 }
-
-
 .mode-selector button:not(.selected):hover::before {
     opacity: 1.0;
 }
@@ -5068,11 +5038,9 @@ section.highlight-fading::before {
     color: var(--GW-mode-selector-button-hover-text-color);
     cursor: pointer;
 }
-
 .mode-selector button:not(:disabled):active {
     transform: translateY(2px);
 }
-
 .mode-selector button:hover::after,
 .mode-selector button.selected::after,
 .mode-selector button.active:not(:hover)::after {
@@ -5095,6 +5063,51 @@ section.highlight-fading::before {
     border-bottom: 1px dotted currentColor;
 }
 
+/*	Inline mode selectors.
+ */
+
+.mode-selector-inline {
+    --GW-mode-selector-background-color: var(--GW-link-underline-background-color);
+
+	position: static;
+    display: inline;
+    margin: 0 -0.25em;
+}
+
+.mode-selector-inline button {
+    display: inline-block;
+    margin: 0 0 0 calc(  var(--mode-selector-button-base-left-margin) 
+    				   + var(--mode-selector-button-left-adjust) 
+    				   - 0.25em);
+}
+
+/*	Fixed mode selectors.
+ */
+
+#ui-elements-container .mode-selector {
+    position: absolute;
+    display: flex;
+    box-sizing: content-box;
+    margin: 3px;
+}
+#ui-elements-container .mode-selector.hidden {
+    opacity: 0;
+}
+
+@media only screen and (hover: hover) {
+	#ui-elements-container .mode-selector {
+		outline: 3px solid transparent;
+	}
+	#ui-elements-container .mode-selector:hover {
+		outline: 3px double var(--GW-mode-selector-border-hover-color);
+	}
+}
+@media only screen and (hover: none) {
+	#ui-elements-container .mode-selector {
+		outline: 1px dotted var(--GW-mode-selector-border-hover-color);
+	}
+}
+
 @media only screen and (max-width: 1534px) {
     #ui-elements-container .mode-selector {
         flex-flow: column;
@@ -5107,30 +5120,26 @@ section.highlight-fading::before {
 }
 @media only screen and (max-width: 1279px) {
     #ui-elements-container .mode-selector {
+        padding: 0.1em 0.1em 0.25em 0.15em;
         background-color: var(--GW-mode-selector-mobile-background-color);
         opacity: 1.0;
     }
     #ui-elements-container .mode-selector button {
-        opacity: 0.1;
-    }
-    #ui-elements-container .mode-selector button:hover,
-    #ui-elements-container .mode-selector button.selected {
-        opacity: 0.5;
-    }
-    #ui-elements-container .mode-selector {
-        padding: 0.1em 0.1em 0.25em 0.15em;
-    }
-    #ui-elements-container .mode-selector button {
-        color: transparent;
         margin: 0;
         padding: 0;
         width: 2em;
         height: 2em;
         align-items: center;
         box-shadow: none;
+        color: transparent;
+        opacity: 0.1;
     }
     #ui-elements-container .mode-selector button + button {
         margin-top: 0.5em;
+    }
+    #ui-elements-container .mode-selector button:hover,
+    #ui-elements-container .mode-selector button.selected {
+        opacity: 0.5;
     }
     #ui-elements-container .mode-selector button::before {
         left: 12.5%;
@@ -5151,8 +5160,6 @@ section.highlight-fading::before {
         height: 2.25em;
     }
 }
-
-
 
 /* EXPERIMENTAL */
 /* Citation formatting: ellipsis'd "et al", subscripted date; see /Subscripts & /Lorem#citation-variants */
