--- a/includes/inlined-head.html
+++ b/includes/inlined-head.html
@@ -2082,6 +2082,13 @@ a[data-link-icon-type*='svg']::after {
 .footnotes .footnote-back img:hover {
     filter: invert(1);
 }
+
+
+/*	Math in Wikipedia pop-frames.
+ */
+.popframe-body.wikipedia-entry .mwe-math-element img {
+	filter: invert(1);
+}
 </style>
 <script>
 /*  Create global 'GW' object, if need be.
