--- a/css/include/initial.css
+++ b/css/include/initial.css
@@ -212,10 +212,10 @@ body {
     #sidebar-links {
         flex-flow: row wrap;
         flex: 1 1 100%;
-        margin: 0.5em 0 0 0;
+        margin: 0;
     }
     #sidebar a#logo {
-        margin: calc(0.5em + 1px) 1px 1px 0;
+        margin: 1px 1px 1px 0;
         padding: 0.5em 0.375em;
     }
     #sidebar a#logo svg {
