Fix 'G' footer logo in dark mode

--- a/includes/inlined-head.html
+++ b/includes/inlined-head.html
@@ -1861,7 +1861,7 @@ span.smallcaps {
 	do variable+invert tricks to get a white copy of the logo as a hack.
  */
 @media only screen and (max-width: 649px) {
-    div#footer::after {
+    a#footer-logo::after {
         filter: invert(1);
         background-color: var(--GW-body-background-color-inverted);
     }
