--- a/includes/inlined-head.html
+++ b/includes/inlined-head.html
@@ -226,6 +226,8 @@
     --GW-popups-body-background-color: var(--GW-body-background-color);
     --GW-popups-popup-background-color: var(--GW-body-background-color);
 
+    --GW-popups-object-popup-background-color: #fff;
+
     --GW-popups-popup-border-color: #ccc;
     --GW-popups-box-shadow-color: #ccc;
     --GW-popups-popup-border-focused-color: #aaa;
@@ -1713,6 +1715,8 @@ span.smallcaps {
     --GW-popups-body-background-color: var(--GW-body-background-color);
     --GW-popups-popup-background-color: var(--GW-body-background-color);
 
+    --GW-popups-object-popup-background-color: #000;
+
     --GW-popups-popup-border-color: #5c5c5c;
     --GW-popups-box-shadow-color: #5c5c5c;
     --GW-popups-popup-border-focused-color: #7c7c7c;
@@ -1973,6 +1977,27 @@ img.invertible-auto:hover,
 img:not(.invertible):not(.invertible-auto):hover {
     filter: none;
     transition: filter 0s ease 0.25s;
+}
+/*	Image alt-text.
+ */
+img::before {
+	filter: invert(1);
+}
+img:hover::before {
+	filter: none;
+}
+@supports (-moz-user-focus: normal) {
+	/*	Only Firefox supports styling the image alt-text, but that interferes 
+		with the transitions.
+	 */
+	img,
+	img:hover,
+	img.invertible,
+	img.invertible:hover,
+	img.invertible-auto,
+	img.invertible-auto:hover {
+		transition: none;
+	}
 }
 /*  For images which have been manually marked up with ‘.invertible-not’, we
     avoid any filtering at all. If they are manually marked up (artwork,
