Improve visibility of popups-disabled show popup options dialog button in dark mode

--- a/includes/inlined-head.html
+++ b/includes/inlined-head.html
@@ -2121,6 +2121,12 @@ a[data-link-icon-type*='svg']::after {
 .popframe-body.wikipedia-entry .mwe-math-element img {
 	filter: invert(1);
 }
+
+/*	Popups-disabled icon/button.
+ */
+div#popups-disabled-show-popup-options-dialog-button {
+    opacity: 0.5;
+}
 </style>
 <script>
 /*  Create global 'GW' object, if need be.
