--- a/css/include/components/dark-mode-adjustments.css
+++ b/css/include/components/dark-mode-adjustments.css
@@ -314,3 +314,9 @@ a[data-link-icon-type*='svg']::after {
 .popframe-body.wikipedia-entry .mwe-math-element img {
 	filter: invert(1);
 }
+
+/*	Popups-disabled icon/button.
+ */
+div#popups-disabled-show-popup-options-dialog-button {
+    opacity: 0.5;
+}
